--- a/src/Components/CountryDetails/CountryDetails.css
+++ b/src/Components/CountryDetails/CountryDetails.css
@@ -109,7 +109,7 @@
 
 .border-country-btn {
   padding: 0.5em 1em;
-  margin: 12px 12px 0 0;
+  margin: 17px 17px 0 0;
 }
 
 @media (max-width: 768px) {
