--- a/src/Components/CountryList/CountryList.css
+++ b/src/Components/CountryList/CountryList.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    padding: 28px;
     gap: 24px;
     flex-wrap: wrap;
     box-sizing: border-box;
