--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,7 +5,7 @@
   width: 100%;
   background-color: var(--header-bg, hsl(0, 0%, 100%));
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%);
-  padding: 16px 0;
+  padding: 20px 90px;
   min-height: 50px;
   position: relative;
   z-index: 10;
